app/public/css/project.css
@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: .95;
    }
}

@-moz-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: .95;
    }
}

@-o-keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: .95;
    }
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: .95;
    }
}


.project-container {
    width: 700px;
    margin: 0 auto;
}

@media only screen and (max-width:800px) {
    .project-container {
        width: 450px;
    }
}

@media only screen and (max-width:480px) {
    .project-container {
        width: 350px;
        /* border:1px red solid; */
    }
}

.white-background {
    background-color: rgba(255, 255, 255, .5);
    /* box-shadow: 5px 5px 8px #FAAE00; */
    width: 100%;
    margin: 0 auto;
    /* height: 500px; */
    color: #fff;
    border: 1px solid #fff;
    display: flex;
    justify-content: space-between;
    animation: fadeIn .9s linear;
}


.project-title {
    color: #FF00BB;
    font-size: 50px;
    font-weight: bold;
    /* text-decoration: underline; */
    letter-spacing: 1.5px;
}

@media only screen and (max-width:800px) {
    .project-title {
        font-size: 30px;
    }
}

.title-small {
    font-size: 20px;
    font-weight: bold;
    color: #FF00BB;
    margin-bottom: -5px;
}

.orange {
    color: #FAAE00;
}

.problem-solution-wrap {
    padding: 30px;
    width: 91%;

}

@media only screen and (max-width:800px) {
    .problem-solution-wrap {
        display: flex;
        flex-direction: column;
        padding: 30px;
        width: 80%;
        margin-top: -20px;
    }
}

.text {
    color: #4B184E;
    line-height: 1.5;
}

.problem-wrap {
    width: 40%;
    margin: 0px 12px;
}

@media only screen and (max-width:800px) {
    .problem-wrap {
        width: 100%;
        margin: 0px;
    }
}

.solution-wrap {
    width: 40%;
    margin: 0px 12px;
}

@media only screen and (max-width:800px) {
    .solution-wrap {
        width: 100%;
        margin: 0px;
    }
}


.challenges-wrap {
    margin-top: 80px;
}

.functionality-wrap {
    margin-top: 80px;
    flex-direction: column;
    /* padding: 30px; */
    padding: 30px;
    width: 91%;

}

@media only screen and (max-width:800px) {
    .functionality-wrap {
        display: flex;
        flex-direction: column;
        padding: 30px;
        width: 80%;
    }
}

.functionality-tech-wrap {
    display: flex;
    justify-content: space-between;
}

@media only screen and (max-width:800px) {
    .functionality-tech-wrap {
        flex-direction: column;
    }
}

.stack-item {
    color: #FF00BB;
    margin-top: 10px;
}

.functionality-text-wrap {
    width: 70%;
}


@media only screen and (max-width:800px){
    .functionality-text-wrap{
        /* border:1px red solid; */
        width:100%;
    }
}

.title-buttons-wrap {
    display: flex;
    /* border:1px red solid; */
    /* align-content: center;
    align-items: center; */
    justify-content: space-between;
}

@media only screen and (max-width:800px) {
    .title-buttons-wrap {
        margin-top: 20px;
    }
}

.project-btn {
    border: 1px #FF00BB solid;
    border-radius: 10px;
    background-color: rgba(0, 0, 0, 0);
    color: #FF00BB;
    padding: 15px;
    font-weight: bold;
    letter-spacing: 1.2px;
    font-size: 13px;
    transition: .2s all linear;
    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.4);
}

.project-btn:hover {
    cursor: pointer;
    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
}

.project-btn:active {

    color: #FAAE00;
    border-color: #FAAE00;
}

.project-btn:focus {
    outline: 0
}


.btns-wrap {
    width: 150px;
    display: flex;
    justify-content: space-between;
    margin-top: 60px;
    /* border:1px red solid; */
}

@media only screen and (max-width:800px) {
    .btns-wrap {
        margin-top: 30px;
    }
}

.tech-wrap {
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    padding: 0;
    margin-right: 10px;
}

@media only screen and (max-width:800px){
    .tech-wrap{
        margin-left:20px;
        flex-direction: row;
        display:grid;
        grid-template-columns: 1fr 1fr 1fr;
    }
}

.func-text {
    margin-left: 20px;
}


.tech-title {
    margin-left: 20px;
}

.design-wrap {
    margin-top: 80px;
}


.project-image {
    width: 100%;
    margin-top: 10px;
}

.team-size {
    color: #4B184E;
    margin-top: -35px;
    margin-bottom: 80px;
    font-size: 12px;
    letter-spacing: .8px;
}

@media only screen and (max-width:800px) {
    .team-size {
        margin-top: -20px;
        /* border:1px red solid; */
    }
}

